--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -173,7 +173,7 @@ theme:
 
 
 
-copyright: Copyright &copy; 2016 - <span id="copyright-year">YYYY</span> it-novum GmbH
+copyright: Copyright &copy; 2016 - <span id="copyright-year">YYYY</span> Allgeier IT Services GmbH
 
 extra:
   social:
